<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/play_next"
        android:icon="@drawable/ic_play_next"
        android:title="@string/play_next" />

    <item
        android:id="@+id/add_to_playlist"
        android:icon="@drawable/ic_playlist_add"
        android:title="@string/add_to_playlist" />

    <item
        android:id="@+id/add_to_favorites"
        android:icon="@drawable/ic_favorite_black"
        android:title="@string/add_to_favorites" />

    <item
        android:id="@+id/share"
        android:icon="@drawable/ic_share"
        android:title="@string/share"
        app:actionProviderClass="android.support.v7.widget.ShareActionProvider"
        app:showAsAction="collapseActionView" />
</menu>